--- a/template/package.json
+++ b/template/package.json
@@ -29,7 +29,7 @@
     "react-native-input-code": "^1.1.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
+    "react-native-screens": "~3.10.2",
     "react-native-svg": "^12.1.1",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
