--- a/template/package.json
+++ b/template/package.json
@@ -24,6 +24,7 @@
     "react": "17.0.1",
     "react-hook-form": "^7.38.0",
     "react-native": "0.64.2",
+    "react-native-callkeep": "^4.3.4",
     "react-native-date-picker": "^4.2.5",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-input-code": "^1.1.0",
